# Original.AlphaFlame

./: Makefile  Makefile.in  README  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  configure.in  libtool
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/: Makefile.am  Makefile.in  alphaflame2cross.c  mxfont.c  mxfont.h  pixelbuffer.c
